used codec library provided by apache